hiding large input json

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -27,6 +27,88 @@
   },
   {
    "cell_type": "markdown",
+   "id": "168ccb96",
+   "metadata": {},
+   "source": [
+    "## Install Packages\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "462fd14e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: spacy in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (3.8.7)\n",
+      "Requirement already satisfied: pandas in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (2.3.2)\n",
+      "Requirement already satisfied: openai in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (1.107.0)\n",
+      "Requirement already satisfied: python-dotenv in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (1.1.1)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (1.0.13)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.0.11)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (3.0.10)\n",
+      "Requirement already satisfied: thinc<8.4.0,>=8.3.4 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (8.3.6)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (1.1.3)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.5.1)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.0.10)\n",
+      "Requirement already satisfied: weasel<0.5.0,>=0.1.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (0.4.1)\n",
+      "Requirement already satisfied: typer<1.0.0,>=0.3.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (0.16.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (4.67.1)\n",
+      "Requirement already satisfied: numpy>=1.19.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.2.6)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.32.5)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (2.11.7)\n",
+      "Requirement already satisfied: jinja2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (3.1.6)\n",
+      "Requirement already satisfied: setuptools in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (78.1.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (25.0)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from spacy) (3.5.0)\n",
+      "Requirement already satisfied: language-data>=1.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from langcodes<4.0.0,>=3.2.0->spacy) (1.3.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (2.33.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.12.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (4.15.0)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy) (0.4.1)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.20)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy) (2025.8.3)\n",
+      "Requirement already satisfied: blis<1.4.0,>=1.3.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from thinc<8.4.0,>=8.3.4->spacy) (1.3.0)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from thinc<8.4.0,>=8.3.4->spacy) (0.1.5)\n",
+      "Requirement already satisfied: click>=8.0.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy) (8.2.1)\n",
+      "Requirement already satisfied: shellingham>=1.3.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy) (1.5.4)\n",
+      "Requirement already satisfied: rich>=10.11.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from typer<1.0.0,>=0.3.0->spacy) (14.1.0)\n",
+      "Requirement already satisfied: cloudpathlib<1.0.0,>=0.7.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from weasel<0.5.0,>=0.1.0->spacy) (0.22.0)\n",
+      "Requirement already satisfied: smart-open<8.0.0,>=5.2.1 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from weasel<0.5.0,>=0.1.0->spacy) (7.3.0.post1)\n",
+      "Requirement already satisfied: wrapt in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.1.0->spacy) (1.17.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/wjm55/.local/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from openai) (4.10.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from openai) (0.28.1)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from openai) (0.10.0)\n",
+      "Requirement already satisfied: sniffio in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from openai) (1.3.1)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai) (1.3.0)\n",
+      "Requirement already satisfied: httpcore==1.* in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from httpx<1,>=0.23.0->openai) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.16.0)\n",
+      "Requirement already satisfied: marisa-trie>=1.1.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy) (1.3.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /Users/wjm55/.local/lib/python3.10/site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/wjm55/.local/lib/python3.10/site-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (2.19.1)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /Users/wjm55/.local/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (0.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/envs/gliner/lib/python3.10/site-packages (from jinja2->spacy) (3.0.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install spacy pandas openai python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76f086af",
    "metadata": {},
    "source": [
@@ -231,7 +313,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "732e8f6d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "INPUT_DATA = [{'text_original': \"This painting depicts Monet's first wife, Camille, outside on a snowy day passing by the French doors of their home at Argenteuil. Her face is rendered in a radically bold Impressionist technique of mere daubs of paint quickly applied, just as the snow and trees are defined by broad, broken strokes of pure white and green.\",\n",
