--- a/data_preparation_WIP.ipynb
+++ b/data_preparation_WIP.ipynb
@@ -51,7 +51,9 @@
         "# Overview of the process\n",
         "\n",
         "1. **Fetch input**  \n",
-        "   - Get artworks from the Cleveland Museum of Art API (by ID or keyword), or use local text examples.  \n",
+        "You have two choices:\n",
+        "   - Get artworks from the Cleveland Museum of Art API (by ID or keyword). You can run the code as-is, or play with changing options to search for specific keywords or record IDs.\n",
+        "   - Upload your own text.\n",
         "\n",
         "2. **Clean text**  \n",
         "   - Normalize Unicode, remove control characters, collapse spaces, mask URLs/emails.  \n",
