--- a/data_preparation_WIP.ipynb
+++ b/data_preparation_WIP.ipynb
@@ -7,7 +7,8 @@
       "collapsed_sections": [
         "YDuesoBf067g"
       ],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mialondon/llm-lod-enriching-heritage/blob/main/data_preparation_WIP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -50,21 +61,24 @@
       "source": [
         "# Overview of the process\n",
         "\n",
-        "1. **Fetch input**  \n",
-        "You have two choices:\n",
-        "   - Get artworks from the Cleveland Museum of Art API (by ID or keyword). You can run the code as-is, or play with changing options to search for specific keywords or record IDs.\n",
+        "Most parts of the recipe simply need to be run in a Notebook environment like Colab, Binder, Jupyter Notebooks.\n",
+        "\n",
+        "1. **Initialise the notebook**\n",
+        "- Run the first 'cells' to import the required libraries\n",
+        "\n",
+        "2. **Fetch input**  \n",
+        "This is the part where you can provide some specific input.\n",
+        "\n",
+        "You can:\n",
+        "   - Get artworks from the Cleveland Museum of Art API (by ID or keyword). You can run the code as-is, or play with changing options to search for specific keywords or record IDs. Or,\n",
         "   - Upload your own text.\n",
         "\n",
-        "2. **Clean text**  \n",
-        "   - Normalize Unicode, remove control characters, collapse spaces, mask URLs/emails.  \n",
+        "3. **Process text**  \n",
+        "   - Clean text - normalize Unicode, remove control characters, collapse spaces, mask URLs/emails.\n",
+        "   - Detect language - we use `langid.py` to assign a language code and confidence score.\n",
+        "   - Tokenize & split sentences - use spaCy's lightweight tokenizer and sentencizer to create tokens and sentence spans.  \n",
         "\n",
-        "3. **Detect language**  \n",
-        "   - Use `langid.py` to assign a language code and confidence score.  \n",
-        "\n",
-        "4. **Tokenize & split sentences**  \n",
-        "   - Use spaCy's lightweight tokenizer and sentencizer to create tokens and sentence spans.  \n",
-        "\n",
-        "5. **Assemble JSON**  \n",
+        "4. **Assemble JSON**  \n",
         "   - Combine results into a structured record:  \n",
         "     - `text_original` and `text_clean`  \n",
         "     - `language` (code + score)  \n",
@@ -79,7 +93,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 1: Installation of the necessary packages and libraries"
+        "# Step 1: Install the necessary packages and libraries"
       ],
       "metadata": {
         "id": "_g_sWNZ7HLN2"
@@ -180,9 +194,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 2a: Fetch Input from a Museum API\n",
+        "# Step 2: get content - run API queries or upload your own text\n",
         "\n",
-        "Get artworks from the Cleveland Museum of Art API (by ID or keyword), or use local text examples."
+        "## Step 2a: Fetch Input from a Museum API\n",
+        "\n",
+        "Get artworks from the Cleveland Museum of Art API (by ID or keyword)."
       ],
       "metadata": {
         "id": "yKvJmCRQHQUN"
@@ -304,7 +320,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2b: Using your own data\n",
+        "# Step 2b: Use your own data\n",
         "\n",
         "TODO: Add explanatory text here"
       ],
@@ -560,7 +576,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 3: Clean text\n",
+        "# Process text for NER\n",
+        "\n",
+        "## Step 3a: Clean text\n",
         "\n",
         "Normalize Unicode, remove control characters, collapse spaces, mask URLs/emails.  "
       ],
@@ -667,7 +685,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 4 Preprocess the texts\n",
+        "## Step 3b - Preprocess the texts\n",
         "\n",
         "Using the Spacy sentencizer, based on the language detected by langid, split the output into sentences.\n",
         "\n",
