added pdf reading recipe

--- a/notebooks/data_preparation/data_preparation.ipynb
+++ b/notebooks/data_preparation/data_preparation.ipynb
@@ -622,11 +622,88 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3. Read text from a pdf file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pypdf = safe_import(\"pypdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we define a function for reading text from a pdf file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"wanderer.pdf\"\n",
+    "\n",
+    "\n",
+    "def get_pdf_text(file_name):\n",
+    "    \"\"\"Read a single text from a pdf file\"\"\"\n",
+    "    try:\n",
+    "        reader = pypdf.PdfReader(file_name)\n",
+    "    except:\n",
+    "        print(f\"{char_failiure} Cannot read pdf file {file_name}!\")\n",
+    "        return []\n",
+    "    if len(reader.pages) == 0:\n",
+    "        print(f\"{char_failiure} No text found in pdf file {file_name}!\")\n",
+    "        return []\n",
+    "    return [reader.pages[0].extract_text()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we call the function and show the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text found: Wanderer above the Sea of Fog is a painting by German Romanticist artist\n",
+      "Caspar David Friedrich made in 1818. It depicts a man standing upon a rocky\n",
+      "precipice with his back to the viewer; he is gazing out on a landscape covered\n",
+      "in a thick sea of fog through which other ridges, trees, and mountains pierce,\n",
+      "which stretches out into the distance indefinitely.\n"
+     ]
+    }
+   ],
+   "source": [
+    "texts = get_pdf_text(\"wanderer.pdf\")\n",
+    "if not texts:\n",
+    "    print(f\"{char_failiure} No texts were found. Are you connected to the internet?\")\n",
+    "else:\n",
+    "    print(\"Text found:\", texts[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "yKvJmCRQHQUN"
    },
    "source": [
-    "### 5.3. Download text from museum website\n",
+    "### 5.4. Download text from museum website\n",
     "\n",
     "We use the description of a painting by Claude Monet from the artwork Cleveland Museum website as example text"
    ]
@@ -640,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "id": "bOSpuE_xsvgX"
    },
@@ -676,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -689,14 +766,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text found: {'id': 136510, 'data_source': 'CMA', 'text_original': 'A skilled horticulturalist as well as an artist, Claude Monet spent the last 30 years of his life painting the private garden he designed and helped cultivate at his home in Giverny in northern France. The resultant canvases are notable for their varied motifs, formats, and sizes. Monumental in scale, this rendering of his water lily pond focuses on the momentary effects of sunlight as it both penetrates and reflects off its shimmering surface. By zeroing in on the water and omitting its horizon and surrounding banks, Monet infers a limitless expanse—a perception amplified by the painting’s vast horizontal format that fills the viewer’s field of vision.'}\n"
+      "Text found: {'id': 135382, 'data_source': 'CMA', 'text_original': \"This painting depicts Monet's first wife, Camille, outside on a snowy day passing by the French doors of their home at Argenteuil. Her face is rendered in a radically bold Impressionist technique of mere daubs of paint quickly applied, just as the snow and trees are defined by broad, broken strokes of pure white and green.\"}\n"
      ]
     }
    ],
    "source": [
     "texts = fetch_cma(\"monet\")\n",
     "if not texts:\n",
-    "    print(\"{char_failiure} No texts were found. Are you connected to the internet?\")\n",
+    "    print(f\"{char_failiure} No texts were found. Are you connected to the internet?\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
