added progress counter

--- a/notebooks/data_preparation/data_preparation.ipynb
+++ b/notebooks/data_preparation/data_preparation.ipynb
@@ -18,16 +18,31 @@
    "source": [
     "# Prepare Cultural Heritage Data for Named Entity Analysis\n",
     "\n",
-    "This notebook prepares data for named entity analysis. It performs four tasks which are represented by the next four chapters:\n",
+    "This notebook fetches and prepares data for named entity analysis. \n",
     "\n",
-    "1. Install required software libraries\n",
-    "2. Download text from museum website\n",
-    "3. Preprocess text for named entity analysis\n",
-    "4. Save results\n",
+    "### Rationale\n",
+    "\n",
+    "This recipe takes some source content and preprocesses it for use across the rest of the cookbook.\n",
+    "\n",
+    "You can either:\n",
+    "\n",
+    "* upload your own sample text (e.g. transcribed text from a digitised item), or\n",
+    "* run queries to get sample content from the Cleveland Museum of Art API from a keyword (e.g. \"Manet\") or record ID search\n",
+    "\n",
+    "The notebook shows the necessary steps to process the results and format them into a JSON file that can then be fed into a NER process.\n",
+    "\n",
+    "### Overview of the process\n",
+    "\n",
+    "Most parts of the recipe simply need to be run in a Notebook environment like Colab, Binder, Jupyter Notebooks.\n",
+    "\n",
+    "1. Initialise the notebook: run the first 'cells' to import the required libraries\n",
+    "2. Fetch input: this is the part where you can provide some specific input, in csv format\n",
+    "3. Preprocess text: clean text, detect language and split the text in tokens and sentences\n",
+    "4. Save the results: combine results into a structured json record: text (original and cleaned), language, sentences, tokens and meta information (counts and ids)\n",
     "\n",
     "The fifth chapter provides alternatives for handling texts from other sources than websites:\n",
     "\n",
-    "5. Alternatives for reading text data"
+    "5. Alternatives for reading text data: text defined in code, text from file, text from pdf file and text from a website"
    ]
   },
   {
@@ -59,6 +74,7 @@
     "import regex\n",
     "import hashlib\n",
     "import importlib\n",
+    "from IPython.display import clear_output\n",
     "import json\n",
     "import regex\n",
     "import requests\n",
@@ -83,7 +99,7 @@
    "source": [
     "char_package = \"📦\"\n",
     "char_success = \"✅\"\n",
-    "char_failiure = \"❌\"\n",
+    "char_failure = \"❌\"\n",
     "\n",
     "\n",
     "def safe_import(package_name):\n",
@@ -107,12 +123,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we set setting required for Google Colab"
+    "Code for monitoring the progress of the task:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squeal(text=None):\n",
+    "    \"\"\"Clear the output buffer of the current cell and print the given text\"\"\"\n",
+    "    clear_output(wait=True)\n",
+    "    if not text is None: \n",
+    "        print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we set setting required for Google Colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +206,7 @@
     "        return [{\"id\": row[0], \"data_source\": data_source, \"text_original\": row[1]}\n",
     "                for row in table_pl.iter_rows()]\n",
     "    except:\n",
-    "        print(f\"{char_failiure} Cannot read data from file {file_name}!\")\n",
+    "        print(f\"{char_failure} Cannot read data from file {file_name}!\")\n",
     "        return []"
    ]
   },
@@ -183,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +233,7 @@
    "source": [
     "texts = read_emt_data(file_name)\n",
     "if len(texts) <= 0:\n",
-    "    print(f\"{char_failiure} No texts found in file {file_name}!\")\n",
+    "    print(f\"{char_failure} No texts found in file {file_name}!\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
@@ -226,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "_Yzx1zaEv9Dp"
    },
@@ -245,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "CU7wQCewxyWc"
    },
@@ -258,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +303,7 @@
     "    try:\n",
     "        spacy_model = spacy.blank(language_id)\n",
     "    except:\n",
-    "        print(f\"{char_failiure} Cannot load model for language {language_id}\")\n",
+    "        print(f\"{char_failure} Cannot load model for language {language_id}\")\n",
     "        spacy_model = spacy.blank(\"xx\")\n",
     "    spacy_model.add_pipe(\"sentencizer\")\n",
     "    preprocessed_text = spacy_model(text)\n",
@@ -289,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "e6xknyGKwQJz"
    },
@@ -298,7 +334,8 @@
     "def preprocess_texts(texts) -> List[Dict[str, Any]]:\n",
     "    \"\"\"Preprocess a list of texts and return the results as a list of dictionaries\"\"\"\n",
     "    results: List[Dict[str, Any]] = []\n",
-    "    for text in texts:\n",
+    "    for index, text in enumerate(texts):\n",
+    "        squeal(f\"Processing text {index + 1}\")\n",
     "        sentences, tokens = preprocess_text(text[\"text_cleaned\"], text[\"language_id\"])\n",
     "        results.append({\"meta\": {**{key: text[key] for key in text if not regex.search(\"text\", key)},\n",
     "                                 \"char_count\": len(text),\n",
@@ -308,12 +345,13 @@
     "                        \"text_cleaned\": text[\"text_cleaned\"],\n",
     "                        \"sentences\": sentences,\n",
     "                        \"tokens\": tokens})\n",
+    "    print(\"Finished processing\")\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -366,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -398,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -411,6 +449,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing text 100\n",
+      "Finished processing\n",
       "{'meta': {'language_id': 'en', 'id': 'C. 0115', 'data_source': 'EMT', 'char_count': 5, 'token_count': 23, 'sentence_count': 4}, 'sentences': [{'id': 0, 'start': 0, 'end': 28, 'text': 'Statuette of the god Anubis.'}, {'id': 1, 'start': 29, 'end': 36, 'text': 'Bronze.'}, {'id': 2, 'start': 37, 'end': 85, 'text': 'Late Period (722-332 BC).. Acquired before 1882.'}, {'id': 3, 'start': 86, 'end': 92, 'text': 'C. 115'}], 'tokens': [{'id': 0, 'text': 'Statuette', 'start': 0, 'end': 9, 'ws': True, 'is_punct': False, 'sent_id': 0}, {'id': 1, 'text': 'of', 'start': 10, 'end': 12, 'ws': True, 'is_punct': False, 'sent_id': 0}, {'id': 2, 'text': 'the', 'start': 13, 'end': 16, 'ws': True, 'is_punct': False, 'sent_id': 0}, '...']}\n"
      ]
     }
@@ -438,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +495,7 @@
     "                files.download(output_file_name)\n",
     "                print(f\"️{char_success} Downloaded preprocessed texts to file {output_file_name}\")\n",
     "            except:\n",
-    "                print(f\"️{char_failiure} Downloading preprocessed texts failed!\")\n",
+    "                print(f\"️{char_failure} Downloading preprocessed texts failed!\")\n",
     "        else:\n",
     "            print(f\"️{char_success} Saved preprocessed texts to file {output_file_name}\")"
    ]
@@ -469,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +589,7 @@
    ],
    "source": [
     "if len(texts) <= 0:\n",
-    "    print(f\"{char_failiure} No texts found!\")\n",
+    "    print(f\"{char_failure} No texts found!\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
@@ -572,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +628,7 @@
     "            infile.close()\n",
     "        return [{\"id\": 1, \"data_source\": data_source, \"text_original\": text}]\n",
     "    except:\n",
-    "        print(f\"{char_failiure} Cannot read data from file {file_name}!\")\n",
+    "        print(f\"{char_failure} Cannot read data from file {file_name}!\")\n",
     "        return []"
    ]
   },
@@ -601,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +655,7 @@
    "source": [
     "texts = read_wikipedia_file(file_name)\n",
     "if len(texts) <= 0:\n",
-    "    print(f\"{char_failiure} No texts found in file {file_name}!\")\n",
+    "    print(f\"{char_failure} No texts found in file {file_name}!\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
@@ -629,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,10 +697,10 @@
     "    try:\n",
     "        reader = pypdf.PdfReader(file_name)\n",
     "    except:\n",
-    "        print(f\"{char_failiure} Cannot read pdf file {file_name}!\")\n",
+    "        print(f\"{char_failure} Cannot read pdf file {file_name}!\")\n",
     "        return []\n",
     "    if len(reader.pages) == 0:\n",
-    "        print(f\"{char_failiure} No text found in pdf file {file_name}!\")\n",
+    "        print(f\"{char_failure} No text found in pdf file {file_name}!\")\n",
     "        return []\n",
     "    return [reader.pages[0].extract_text()]"
    ]
@@ -674,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +732,7 @@
    "source": [
     "texts = get_pdf_text(\"wanderer.pdf\")\n",
     "if not texts:\n",
-    "    print(f\"{char_failiure} No texts were found. Are you connected to the internet?\")\n",
+    "    print(f\"{char_failure} No texts were found. Are you connected to the internet?\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
@@ -717,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "id": "bOSpuE_xsvgX"
    },
@@ -732,7 +772,7 @@
     "    try:\n",
     "        response = requests.get(base_url, params={\"q\": query_string, \"skip\": 0, \"limit\": 100}, timeout=10)\n",
     "    except:\n",
-    "        print(f\"{char_failiure} Cannot download data from {base_url}\")\n",
+    "        print(f\"{char_failure} Cannot download data from {base_url}\")\n",
     "        return []\n",
     "    response.raise_for_status()\n",
     "    artworks = response.json().get(\"data\", [])\n",
@@ -753,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -773,7 +813,7 @@
    "source": [
     "texts = fetch_cma(\"monet\")\n",
     "if not texts:\n",
-    "    print(f\"{char_failiure} No texts were found. Are you connected to the internet?\")\n",
+    "    print(f\"{char_failure} No texts were found. Are you connected to the internet?\")\n",
     "else:\n",
     "    print(\"Text found:\", texts[0])"
    ]
