made save_results generic

--- a/notebooks/data_preparation/data_preparation.ipynb
+++ b/notebooks/data_preparation/data_preparation.ipynb
@@ -482,11 +482,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_results(texts):\n",
+    "def save_results(texts, key=\"\"):\n",
     "    \"\"\"Save preprocessed texts in a json file\"\"\"\n",
     "    json_string = json.dumps(texts, ensure_ascii=False, indent=2)\n",
     "    hash = hashlib.sha1(json_string.encode(\"utf-8\")).hexdigest()\n",
-    "    output_file_name = f\"output_{hash}.json\"\n",
+    "    output_file_name = f\"output_{key}{hash}.json\"\n",
     "    with open(output_file_name, \"w\", encoding=\"utf-8\") as output_file:\n",
     "        print(json_string, end=\"\", file=output_file)\n",
     "        output_file.close()\n",
@@ -516,12 +516,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_11f98441067263d80ee1a6bac27babf0f2c6734b.json\n"
+      "️✅ Saved preprocessed texts to file output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json\n"
      ]
     }
    ],
    "source": [
-    "save_results(texts_preprocessed)"
+    "save_results(texts_preprocessed, key=\"data_preparation_\")"
    ]
   },
   {
